fix: 🐛 Increase the size of text underlines for links
Underline width was too small relative to the link's font-size. This makes hovered links far more obvious and clear

--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -95,8 +95,8 @@
           text-decoration: underline;
           text-decoration-color: $gold;
           text-decoration-skip-ink: auto;
-          text-decoration-thickness: .1em;
-          text-underline-offset: .1em;
+          text-decoration-thickness: .18em;
+          text-underline-offset: .12em;
           text-decoration-skip-ink: auto;
         }
     }
